--- a/style.css
+++ b/style.css
@@ -935,9 +935,11 @@ object {
   background-color: rgba(0,0,0,0.1);
 }
 
-.hentry{
-  margin-bottom: 0;
+article.hentry{
+  margin: 2em auto;
+  max-width: 800px;
   padding-bottom: 1.5em;
+  box-shadow: 0px 5px 25px rgba(0,0,0,0.4);
 }
 
 .entry-title, .entry-meta, .entry-content, .entry-footer, .frontend-login-wrapper {
@@ -958,9 +960,9 @@ object {
 }
 
 .site-footer .site-info a{
-      color: #fff;
-    font-size: 0.9em;
-    text-decoration: none;
+  color: #fff;
+  font-size: 0.9em;
+  text-decoration: none;
 }
 
 #site-navigation{
