--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://briancoords.com/
 Author: Brian Coords
 Author URI: https://briancoords.com/
 Description: Description
-Version: 1.0.1
+Version: 1.0.2
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: journal-wp-theme
@@ -254,10 +254,13 @@ th {
 # Typography
 --------------------------------------------------------------*/
 * {
+/*
   font-family: -apple-system, BlinkMacSystemFont, 
     "Segoe UI", "Roboto", "Oxygen", 
     "Ubuntu", "Cantarell", "Fira Sans", 
     "Droid Sans", "Helvetica Neue", sans-serif;
+*/
+  font-family: monospace;
 }
 
 body,
@@ -266,7 +269,7 @@ input,
 select,
 textarea {
 	color: #404040;
-	font-family: sans-serif;
+/*	font-family: sans-serif;*/
 	font-size: 18px;
 	font-size: 1rem;
 	line-height: 1.5;
