--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://briancoords.com/
 Author: Brian Coords
 Author URI: https://briancoords.com/
 Description: Description
-Version: 1.0.2
+Version: 1.0.3
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: journal-wp-theme
@@ -354,7 +354,7 @@ html {
 }
 
 body {
-	background: #fff; /* Fallback for when there is no custom background color defined. */
+	background: #333; /* Fallback for when there is no custom background color defined. */
 }
 
 blockquote:before,
@@ -955,11 +955,16 @@ header.archive-header{
   overflow: auto;
 }
 
+article{
+  background: #fff;
+}
+
 article.hentry{
   margin: 2em auto;
   max-width: 740px;
   padding-bottom: 1.5em;
   box-shadow: 0px 5px 25px rgba(0,0,0,0.4);
+
 /*  border:3px solid #fff;*/
 }
 
