--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://briancoords.com/
 Author: Brian Coords
 Author URI: https://briancoords.com/
 Description: Description
-Version: 1.0.3
+Version: 1.0.4
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: journal-wp-theme
@@ -957,6 +957,10 @@ header.archive-header{
 
 article{
   background: #fff;
+  margin: 2em auto;
+  max-width: 740px;
+  padding-bottom: 1.5em;
+  box-shadow: 0px 5px 25px rgba(0,0,0,0.4);
 }
 
 article.hentry{
