--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://briancoords.com/
 Author: Brian Coords
 Author URI: https://briancoords.com/
 Description: Description
-Version: 1.0.4
+Version: 1.0.5
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: journal-wp-theme
@@ -945,9 +945,11 @@ header.entry-header {
   padding-bottom: 1em;
 }
 
+/*
 header.site-header {
   box-shadow: 0px 3px 25px rgba(0,0,0,0.5);
 }
+*/
 
 header.archive-header{
 /*  background-color: rgba(0,0,0,0.1); */
